# TurboDownloader-Cpp

./: .gitignore  CMakeLists.txt  README.md  WINDOWS_SETUP.md
docs/design/: ARCHITECTURE.md
docs/guides/: WINDOWS_GETTING_STARTED.md
include/openidm/engine/: DownloadManager.h  DownloadTask.h  NetworkProbe.h  Segment.h  SegmentScheduler.h  SegmentWorker.h  Types.h
include/openidm/integration/: YtDlpIntegration.h
include/openidm/persistence/: PersistenceManager.h
include/openidm/viewmodel/: DownloadListModel.h
qml/: Main.qml
qml/components/: ActionButton.qml  DownloadItemDelegate.qml  GlassPanel.qml  ProgressBar.qml  SpeedIndicator.qml
qml/theme/: Theme.qml  qmldir
qml/views/: AddDownloadDialog.qml  DownloadListView.qml  DownloadsView.qml  SettingsView.qml
resources/: resources.qrc
src/: main.cpp
src/engine/: CurlWrapper.cpp  CurlWrapper.h  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h  DownloadTypes.h  NetworkProbe.cpp  Segment.cpp  SegmentScheduler.cpp  SegmentScheduler.h  SegmentWorker.cpp  SegmentWorker.h  SpeedCalculator.cpp  SpeedCalculator.h
src/persistence/: DatabaseSchema.cpp  DatabaseSchema.h  PersistenceManager.cpp  PersistenceManager.h
src/platform/: NotificationManager.cpp  NotificationManager.h  PlatformIntegration.cpp  PlatformIntegration.h
src/streaming/: StreamParser.cpp  StreamingResolver.cpp  StreamingResolver.h  YtDlpIntegration.cpp  YtDlpWrapper.cpp  YtDlpWrapper.h
src/viewmodel/: DownloadController.cpp  DownloadController.h  DownloadListModel.cpp  DownloadListModel.h  SettingsController.cpp  SettingsController.h
tests/: CMakeLists.txt  test_engine.cpp
